<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?attr/actionBarSize">



    <ImageView
        android:id="@+id/character_image_detail"
        android:layout_width="128dp"
        android:layout_height="128dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingTop="?android:attr/actionBarSize"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        tools:src="@tools:sample/avatars"
        android:contentDescription="@string/a_picture_of_a_character_in_attack_on_titan" />



    <TextView
        android:id="@+id/character_name_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/name"
        app:layout_constraintTop_toBottomOf="@id/character_image_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="16dp"
        android:padding="8dp"
        />

    <TextView
        android:id="@+id/character_age_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/age"
        app:layout_constraintTop_toBottomOf="@id/character_name_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/character_gender_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Team:"
        app:layout_constraintTop_toBottomOf="@id/character_age_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/character_residence_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Position:"
        app:layout_constraintTop_toBottomOf="@id/character_gender_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/character_height_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/height"
        app:layout_constraintTop_toBottomOf="@id/character_residence_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:padding="8dp"/>

    <TextView
        android:id="@+id/character_occupation_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occupation"
        app:layout_constraintTop_toBottomOf="@id/character_height_detail"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        android:padding="8dp"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <TextView
        android:id="@+id/error_message"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/an_unknown_error_occurred"
        android:visibility="invisible"/>


</androidx.constraintlayout.widget.ConstraintLayout>